--- a/web/index.html
+++ b/web/index.html
@@ -1,4 +1,4 @@
-<!--A Design by W3layouts
+﻿<!--A Design by W3layouts
 Author: W3layout
 Author URL: http://w3layouts.com
 License: Creative Commons Attribution 3.0 Unported
@@ -66,8 +66,8 @@ $(document).ready(function() {
 				<li class="m_nav_item" id="moble_nav_item_2"> <a href="#about">About</a> </li>
 				<!--<li class="m_nav_item" id="moble_nav_item_3"> <a href="#statistics">Statistics</a> </li>-->
 				<li class="m_nav_item" id="moble_nav_item_4"> <a href="#experience">Experience</a> </li>
-				<li class="m_nav_item" id="moble_nav_item_5"> <a href="#projects">Projects</a> </li>
-				<li class="m_nav_item" id="moble_nav_item_6"> <a href="#contact">Contact</a> </li>
+				<!--<li class="m_nav_item" id="moble_nav_item_5"> <a href="#projects">Projects</a> </li>
+				<li class="m_nav_item" id="moble_nav_item_6"> <a href="#contact">Contact</a> </li>-->
 			  </ul>
 			</div>
 		<!-- menu -->
@@ -123,7 +123,7 @@ $(document).ready(function() {
 					</div>
 					<div class="w3ls-banner-left-info">
 						<h4>Cell</h4>
-						<p> (India) +91 939-6296-878, (USA)  </p>
+						<p> (India) +91 939-6296-878, (USA) +1 218-585-5322 </p>
 					</div>
 					<!--<div class="w3ls-banner-left-info">
 						<h4>Address</h4>
@@ -241,7 +241,8 @@ $(document).ready(function() {
 						</div>
 						<div class="experience-grid-info">
 							<h5>Sagarsoft (India) Limited</h5>
-							<p>Currently working as a Associate Project Manager. Key responsibilities includes, .net Architect, Technical Lead, Asp.net and C# Development, <a href="#">Read More</a>
+							<p>Currently working as a Associate Project Manager. Key responsibilities includes, .net Architect, Technical Lead, Asp.net and C# Development. 
+                            <br/>Mar ‘07 - Till Date. 
 					 </p>
 						</div>
 					</div>
@@ -250,9 +251,11 @@ $(document).ready(function() {
 							<i class="fa fa-bell" aria-hidden="true"></i>
 						</div>
 						<div class="experience-grid-info">
-							<h5>Ut dapibus nisi turpis</h5>
-							<p>Curabitur augue urna, venenatis vel enim at, sodales tempus diam. Aliquam ornare, magna a cursus tempus, arcu massa accumsan justo, non facilisis risus ante vel ex.</p>
-						</div>
+							<h5>3i Infotech</h5>
+                            <p>
+                               Worked as a Software Engineer. Key responsibilities included, Web Application development with Asp.net, C#.net, MS SQL Server.
+                                <br />Dec ‘05 – Mar ’07.
+</div>
 					</div>
 					<div class="clearfix"> </div>
 				</div>
@@ -262,13 +265,13 @@ $(document).ready(function() {
 							<i class="fa fa-comments" aria-hidden="true"></i>
 						</div>
 						<div class="experience-grid-info">
-							<h5>Sagarsoft (India) Limited</h5>
-							<p>Currently working as a Associate Project Manager. Key responsibilities includes, Microsoft .net Architect, 
+							<h5>IRealities</h5>
+							<p>Worked as a Web Developer. Key responsibilities included, Web Apps development with Asp 3.0, Asp.net, C#.net, MS SQL Server.
 
 							</p>
 						</div>
 					</div>
-					<div class="col-md-6 experience-grid experience-grid3">
+					<!--<div class="col-md-6 experience-grid experience-grid3">
 						<div class="experience-grid-icon icon-left hvr-radial-out">
 							<i class="fa fa-asterisk" aria-hidden="true"></i>
 						</div>
@@ -276,7 +279,7 @@ $(document).ready(function() {
 							<h5>Ut dapibus nisi turpis</h5>
 							<p>Curabitur augue urna, venenatis vel enim at, sodales tempus diam. Aliquam ornare, magna a cursus tempus, arcu massa accumsan justo, non facilisis risus ante vel ex.</p>
 						</div>
-					</div>
+					</div>-->
 					<div class="clearfix"> </div>
 				</div>
 			</div>
@@ -284,7 +287,7 @@ $(document).ready(function() {
 	</div>
 	<!-- //experience -->
 	<!-- feedback -->
-	<div class="jarallax feedback">
+	<!--<div class="jarallax feedback">
 		<div class="container">
 			<div class="w3-agileits-statistics-heading">
 				<h3>Clients Feedback</h3>
@@ -371,7 +374,7 @@ $(document).ready(function() {
 			</script>
 
 		</div>
-	</div>
+	</div>-->
 	<!-- //feedback -->
 	<!-- projects -->
 	<div class="projects" id="projects">
@@ -380,7 +383,8 @@ $(document).ready(function() {
 				<h3>My Projects</h3>
 			</div>
 		</div>
-		<div class="bs-example bs-example-tabs" role="tabpanel" data-example-id="togglable-tabs">
+        <h3>Coming Soon..</h3>
+		<!--<div class="bs-example bs-example-tabs" role="tabpanel" data-example-id="togglable-tabs">
 					<ul id="myTab" class="nav nav-tabs" role="tablist">
 						<li role="presentation" class="active"><a href="#home-main" id="home-tab" role="tab" data-toggle="tab" aria-controls="home" aria-expanded="true">All</a></li>
 						<li role="presentation"><a href="#learning" role="tab" id="learning-tab" data-toggle="tab" aria-controls="learning">Apps</a></li>
@@ -559,7 +563,7 @@ $(document).ready(function() {
 							</div>
 						</div>
 					</div>
-		</div>
+		</div>-->
 		<script src="js/jquery.tools.min.js"></script>
 			<script src="js/jquery.mobile.custom.min.js"></script>
 			<script src="js/jquery.cm-overlay.js"></script>
@@ -572,12 +576,12 @@ $(document).ready(function() {
 	</div>
 	<!-- //projects -->
 	<!-- map -->
-	<div class="map-grid">
+	<!--<div class="map-grid">
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d100949.24429313939!2d-122.44206553967531!3d37.75102885910819!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80859a6d00690021%3A0x4a501367f076adff!2sSan+Francisco%2C+CA%2C+USA!5e0!3m2!1sen!2sin!4v1472190196783" class="map" style="border:0" allowfullscreen=""></iframe>
-	</div>
+	</div>-->
 	<!-- //map -->
 	<!-- contact -->
-	<div class="contact" id="contact">
+	<!--<div class="contact" id="contact">
 		<div class="container">
 			<div class="w3-agileits-statistics-heading experience-heading">
 				<h3>Contact Me</h3>
@@ -616,12 +620,12 @@ $(document).ready(function() {
 				</form>
 			</div>
 		</div>
-	</div>
+	</div>-->
 	<!-- //contact -->
 	<!-- copyright -->
 	<div class="agileits-w3layouts-footer">
 		<div class="container">
-			<p>© 2016 Creative Resume. All rights reserved | Design by <a href="http://w3layouts.com">W3layouts</a></p>
+			<p>© 2016 amitshinde.net . All rights reserved | Design by <a href="http://w3layouts.com">W3layouts</a></p>
 		</div>
 	</div>
 	<!-- //copyright -->
